--- a/mcor.css
+++ b/mcor.css
@@ -1,3 +1,16 @@
+#body {
+	margin:0px;
+	font-family:sans-serif;
+	font-size: 12px;
+}
+
+#nav-container {
+	width:100%;
+	position:fixed;
+	background:rgba(255,255,255,.5);
+	border-bottom:1px solid gray;
+}
+
 #banner img {
 	width:100%;
 }
