--- a/mcor.css
+++ b/mcor.css
@@ -12,11 +12,6 @@
 	padding:0 20%;
 }
 
-#logo {
-	display:inline-block;
-	width:334px;
-}
-
 #menu {
 	display: inline-block;
 	position:absolute;
@@ -29,4 +24,17 @@
 #banner img {
 	width:100%;
 	padding-top:86px;
+}
+
+ul {
+	display:inline;
+	list-style: none;
+}
+
+ul li {
+	display: inline-block;
+}
+
+ul li ul {
+	display:none;
 }
