--- a/mcor.css
+++ b/mcor.css
@@ -1,4 +1,4 @@
-#body {
+body {
 	margin:0px;
 	font-family:sans-serif;
 	font-size: 14px;
@@ -36,5 +36,5 @@ ul li {
 }
 
 ul li ul {
-	display:none;
+	visibility: hidden;
 }
