--- a/mcor.css
+++ b/mcor.css
@@ -17,13 +17,11 @@ body {
 	position:absolute;
 	}
 
-#banner {
-	border-bottom:3px ridge orange;
-}
 
 #banner img {
 	width:100%;
 	padding-top:86px;
+	border-bottom:3px ridge orange;
 }
 
 ul {
@@ -51,4 +49,41 @@ ul li:hover ul {
 	background:white;
 	visibility: visible;
 	opacity: 1;
+}
+
+
+
+
+
+
+#content-container h1 {
+	font-size: 18px;
+}
+
+#content-container h2 {
+	font-size:24px;
+	text-align: center;
+}
+
+
+#content-container img {
+	width:100%;
+}
+
+#left {
+	display: inline-block;
+	float: left;
+	width: 33%;
+}
+
+#mid {
+	display: inline-block;
+	float: left;
+	width:33%;
+}
+
+#right {
+	display: inline-block;
+	float: right;
+	width: 33%;
 }
