--- a/mcor.css
+++ b/mcor.css
@@ -63,6 +63,7 @@ ul li:hover ul {
 #content-container h2 {
 	font-size:24px;
 	text-align: center;
+	font-weight: normal;
 }
 
 
@@ -79,16 +80,19 @@ ul li:hover ul {
 	display: inline-block;
 	float: left;
 	width: 33%;
+	margin:0 10px;
 }
 
 #mid {
 	display: inline-block;
 	float: left;
 	width:33%;
+	margin:0 10px;
 }
 
 #right {
 	display: inline-block;
 	float: right;
 	width: 33%;
+	margin:0 10px;
 }
